# dfo

./: README.md
py/: .env-dev  Dockerfile  Dockerfile-app  README.md  docker-compose.yml  pyproject.toml  start.sh  test.py
py/dfo/: main.py
py/dfo/algo/: dfo.py
py/dfo/api/: __init__.py
py/dfo/api/routes/: __init__.py  health_check.py  session.py
py/dfo/core/: __init__.py  config.py  logger.py  router.py  security.py
py/dfo/services/redis/: __init__.py  manager.py
py/dfo/services/websocket/: __init__.py  manager.py
py/dfo/static/: index.html
py/frontend/: CHANGELOG.md  README.md  package-lock.json  package.json
py/frontend/public/: index.html  manifest.json
py/frontend/src/: App.js  Dfo.js
